fix: fix some bug spacing

--- a/labxblock/static/css/labxblock.css
+++ b/labxblock/static/css/labxblock.css
@@ -199,9 +199,17 @@
     justify-content: center;
     align-items: stretch;
     padding: 0.75rem 1rem; 
-    border-radius: 0.375rem;
     border-left: solid 2px #5aa447;
     background-color: rgba(90, 164, 71, 0.05);
+    /* border-top-left-radius: 0.375rem; */
+}
+
+.border-radius-top-left{
+    border-top-left-radius: 0.375rem;
+}
+
+.border-radius-bottom-left{
+    border-bottom-left-radius: 0.375rem;
 }
 
 .detail-lab-result-title {
@@ -214,12 +222,14 @@
 }
 
 .detail-lab-result-content {
-    display: none;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #2c3744;
-    margin-top: 0.5rem;
+}
+
+.detail-lab-result-content-spc {
+    padding-top: 0 !important;
 }
 
 .result-container{
